# AOC2023

./: .clang-format  .gitignore  CMakeLists.txt  README.md
dataset/: day01_1.txt  day02_1.txt  day03_1.txt  day04_1.txt  day05_1.txt  day06_1.txt  day07_1.txt  day08_1.txt  day09_1.txt  day11_1.txt  day12_1.txt  day13_1.txt
include/: util.hpp
python/: day09.py  day10.py  day11.py  day12.py  day13.py
src/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day11.cpp  day12.cpp  day13.cpp
